--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,35 @@
 /*! App styles for ivyringel.com  */
+.shadow-1 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+
+.shadow-2 {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+
+.shadow-3 {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+
+.shadow-4 {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+
+.shadow-5 {
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
+
+h1 {
+  font-size: 5.9vw; }
+
+h2 {
+  font-size: 3.0vh; }
+
+p {
+  font-size: 2vmin; }
+
 body {
   font-family: "Arimo"; }
 
+@media (max-width: 767px) {
+  .site-container .site-body {
+    width: 90% !important; } }
 .site-container .site-background {
   position: fixed;
   top: 30%;
@@ -14,13 +42,11 @@ body {
   width: 70%;
   margin: auto;
   margin-top: 50px;
+  margin-bottom: 50px;
   height: 800px;
   background: #afafaf; }
   .site-container .site-body .navbar {
     border-radius: 0; }
-
-#navbar {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26); }
 
 .jumbotron {
   width: 100%;
