--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,9 @@
 .shadow-5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
 
+.btn-primary {
+  background-color: cadetblue !important; }
+
 body {
   font-family: "Arimo";
   background: #c3c3c3; }
