--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,1 +1,8 @@
-$primary: cadetblue;
+//$primary: cadetblue;
+$primary: #009688;
+$secondary: #3fb0ac;
+$accent: #fae596;
+$gray: #dddfd4;
+$grey: #dddfd4;
+
+$dark: #484848;
