--- a/css/media.css
+++ b/css/media.css
@@ -1,11 +1,11 @@
 .play-button {
-  background: #fff;
+  background: #009688;
   border-radius: 100%;
   height: 35px;
   width: 35px;
   margin-right: 10px;
   padding: 5px;
-  color: #000; }
+  color: #fff; }
 
 .time {
   float: right;
