--- a/sass/media.scss
+++ b/sass/media.scss
@@ -1,11 +1,13 @@
+@import 'variables';
+
 .play-button {
-  background: #fff;
+  background: $primary;
   border-radius: 100%;
   height: 35px;
   width: 35px;
   margin-right: 10px;
   padding: 5px;
-  color: #000;
+  color: #fff;
 }
 
 .time {
