--- a/css/app.css
+++ b/css/app.css
@@ -95,7 +95,10 @@ article {
       padding-right: 8px;
       padding-left: 3px; }
 
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
+  #navbar {
+    border-radius: 0; }
+
   .site-body {
     width: 100% !important;
     margin: 0 !important;
