--- a/sass/app.scss
+++ b/sass/app.scss
@@ -150,11 +150,14 @@ article {
 
 }
 
-@include media("<tablet") {
+@include media("<desktop") {
   .site-container{
     .site-body {
       //width: 90% !important;
     }
+  }
+  #navbar {
+    border-radius: 0; 
   }
   .site-body {
     width: 100% !important;
