--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,12 @@
 .shadow-5 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
 
+a {
+  color: #009688; }
+  a:hover {
+    color: #00c9b6;
+    text-decoration: none; }
+
 .btn-primary {
   background-color: #009688 !important; }
 
