--- a/sass/media.scss
+++ b/sass/media.scss
@@ -17,6 +17,19 @@
   color: #fff;
 }
 
+.harmonize {
+  margin: 10px 0; 
+  .time {
+    color: $primary; 
+  }
+  .title {
+    font-size: 20px;  
+  }
+  .artist {
+    color: $primary;
+    font-size: 12px;
+  }
+} 
 
 /* 
  * Taken from https://css-tricks.com/seamless-responsive-photo-grid/
