--- a/sass/app.scss
+++ b/sass/app.scss
@@ -54,14 +54,14 @@ a {
 
 body {
   font-family: "Arimo";
-  background: #c3c3c3;
+  background: #333;
 }
 
 .site-container {
 
   .site-background {
     position: fixed;
-    background: #fff;
+    //background: #fff;
     top: 0;
     left: 0;
     right: 0;
